opam-version: "2.0"
name:         "h"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/z"
bug-reports:  "https://github.com/dinosaure/z/issues"
dev-repo:     "git+https://github.com/dinosaure/z.git"
doc:          "https://dinosaure.github.io/z/"
license:      "MIT"
synopsis:     "zlib, rfc1951, gzip and Git diff"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"
  "base-bytes"
  "base-bigarray"
  "fmt"
  "alcotest" {with-test}
  "hxd" {with-test}
  "bigstringaf" {with-test}
]
