(executable
 (name test)
 (modules test)
 (libraries hxd.string bigstringaf checkseum.c dd zz alcotest))

(executable
 (name test_h)
 (modules test_h)
 (libraries hxd.string bigstringaf checkseum.c h alcotest))

(alias
 (name runtest)
 (package dd)
 (deps (:test test.exe) (source_tree corpus))
 (action (run %{test} --color=always)))

(alias
 (name runtest)
 (package h)
 (deps (:test test_h.exe))
 (action (run %{test} --color=always)))
