(library
 (name zl)
 (self_build_stubs_archive (zl)))

(rule
 (targets libzl_stubs.a dllzl_stubs.so)
 (deps (source_tree zlib))
 (action (progn
          (chdir zlib (bash "./configure"))
          (chdir zlib (bash "make CFLAGS+='-DDUMP_BL_TREE -DZLIB_DEBUG -Dverbose=3'"))
          (bash "cp zlib/libz.a libzl_stubs.a")
          (bash "cp zlib/libz.so dllzl_stubs.so"))))

